--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -62,14 +62,22 @@
     <% } %>
   </head>
 
-  <body class="antialiased w-full text-gray-700">
+  <body class="antialiased w-full text-gray-700 text-2xl rising-bg">
     <div class="max-w-screen-md mx-auto">
-      <div class="border-b border-gray-300">
-        <div class="pt-16 pb-8">
-          <h1 class="font-semibold text-3xl text-gray-800"><%= site.title %></h1>
-          <div class="text-xl"><%= site.description %></div>
-        </div>
-        <nav>
+      <h1 class="font-semibold text-3xl text-gray-800 sr-only"><%= site.title %></h1>
+      <div class="sr-only"><%= site.description %></div>
+      <img
+        class="pt-4 pb-8 max-w-md"
+        src="/assets/images/rising-sky-logo.svg"
+        alt="Rising Sky logo"
+      />
+      <p>Rising Sky Limited is a web development studio based in Scotland.</p>
+      <p>
+        The lead developer is Patrick Grey. Patrick has been developing e-learning content and
+        applications for the Air Traffic and Network Management domains since 2001.
+      </p>
+
+      <!-- <nav>
           <ul class="flex flex-wrap text-xl">
             <li class="mr-6">
               <a class="text-gray-700 border-none hover:no-underline hover:text-gray-800" href="/"
@@ -85,15 +93,14 @@
               </a>
             </li>
           </ul>
-        </nav>
-      </div>
+        </nav> -->
 
-      <div class="text-xl py-5"><%- content %></div>
+      <!-- <div class="text-xl py-5"><%- content %></div>
 
       <div class="border-t border-gray-300 text-center py-8">
         Made with <span role="img" aria-label="Love">♥</span> by
         <a href="https://creativedesignsguru.com">CreativeDesignsGuru</a>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
