--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -1,7 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import url("https://fonts.googleapis.com/css?family=Noto+Serif:400,700|Roboto:300,400,500,700,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap");
 
 @layer base {
   // TEXT
@@ -38,14 +38,15 @@
   }
 
   footer {
-    @apply mx-auto;
+    @apply mx-auto my-12;
   }
 
   h2,
   h3,
   h4,
   h5 {
-    @apply text-iansblue-light font-serif my-5;
+    @apply font-serif my-5;
+    color: #374160;
   }
 
   h3,
@@ -134,7 +135,7 @@
   }
 
   a {
-    @apply text-iansblue-light;
+    color: #d55239;
     background-size: 100% 200%;
     background-position: 0 -100%;
     background-image: linear-gradient(
@@ -147,12 +148,12 @@
 
   a:hover {
     background-position: 0 0%;
-    @apply text-iansblue-light;
+    color: #d55239;
   }
 
   a:visited {
     // color: #09c;
-    @apply text-iansblue-light;
+    color: #d55239;
   }
 
   a:focus {
@@ -205,13 +206,13 @@
     @apply absolute h-full w-full object-cover;
   }
 
-  .ians-video-16\/9 {
+  .rs-video-16\/9 {
     padding-bottom: 56.25%;
   }
-  .ians-video-4\/3 {
+  .rs-video-4\/3 {
     padding-bottom: 75%;
   }
-  .aspect-ratio-21\/9 {
+  .rs-ratio-21\/9 {
     padding-bottom: 42.86%;
   }
 }
