--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -41,6 +41,7 @@
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
   </head>
   <body>
+    <a class="rs-skip-link" href="#main-content">Skip to content</a>
     <article>
       <div class="rs-column">
         <header>
@@ -77,7 +78,7 @@
         </header>
       </div>
 
-      <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
+      <main id="main-content" {% if templateClass %} class="{{ templateClass }}"{% endif %}>
 
         {{ content | safe }}
       </main>
