--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,7 @@ html,
 body,
 article,
 div,
+img,
 header,
 nav,
 main,
@@ -114,6 +115,11 @@ body {
   scrollbar-gutter: stable;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 /* Make sure the footer is at the bottom, even on short pages. */
 article {
   display: grid;
@@ -127,13 +133,6 @@ header {
   flex-wrap: wrap;
   align-items: top;
   justify-content: space-between;
-
-  /* gap: var(--s1); */
-  /* width: 100%;
-  padding: 1rem 1rem 0 1rem; */
-  /* text-align: left;
-  padding-left: var(--s0);
-  padding-right: var(--s0); */
 }
 
 header > h1 {
@@ -143,7 +142,6 @@ header > h1 {
   padding-top: var(--s2);
   margin-top: 0;
   margin-bottom: 0;
-  /* margin-bottom: var(--s1); */
 }
 
 header > nav {
@@ -160,7 +158,6 @@ nav > ul {
   align-items: center;
   justify-content: end;
   gap: 0 clamp(1.09rem, 1rem + 0.47vw, 1.33rem);
-  /* margin: 0 0 0 auto; */
   list-style: none;
   font-size: clamp(1rem, calc(1.5vw + 1em), 1.3rem);
   padding: 0;
@@ -168,20 +165,7 @@ nav > ul {
 }
 
 nav > ul li {
-  /* display: inline-block; */
   margin-bottom: var(--s1);
-}
-
-/* .rs-nav li:not(:first-child) {
-  margin-top: var(--s1);
-} */
-
-nav > ul li:not(:last-child) {
-  /* margin-right: var(--s1); */
-}
-
-nav > ul .nav-item-active {
-  /* border-bottom: 5px solid var(--color-primary); */
 }
 
 nav > ul a {
@@ -269,6 +253,47 @@ nav > ul a:focus::after {
 
 /* SKIP LINK END*/
 
+/* Home page CSS */
+
+.rs-home-hero {
+  position: relative;
+  background-color: #eee;
+  height: 50vw;
+  max-height: 15rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+}
+
+.rs-home-hero > p {
+  position: absolute;
+  right: var(--s-3);
+  top: var(--s-3);
+  font-size: var(--s-3);
+  margin: 0;
+  padding: 0;
+}
+
+.rs-home-hero .rs-column {
+  display: flex;
+  /* padding: 0; */
+  height: 100%;
+}
+
+.rs-home-hero .rs-column p {
+  align-self: flex-end;
+  display: inline-block;
+  margin: 0 0 -3rem 0;
+  padding: var(--s0);
+  font-size: var(--s1);
+  background-color: var(--color-secondary);
+  color: white;
+}
+
+/* Home page CSS END*/
+
 /* UTILITIES */
 
 .rs-column {
@@ -285,4 +310,8 @@ nav > ul a:focus::after {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+.hide {
+  display: none;
 }
