--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title or metadata.title }}</title>
+    <script>
+      document.documentElement.className = 'js';
+    </script>
     <meta name="description" content="{{ description or metadata.description }}">
     <!-- Head info from https://htmlhead.dev/ -->
     <!-- Theme Color for Chrome, Firefox OS and Opera -->
