--- a/index.njk
+++ b/index.njk
@@ -4,24 +4,27 @@ eleventyNavigation:
   key: home
   order: 1
 ---
+<div class="hero-container">
+  <p id="hero-data">A shipwreck on Machrihanish Beach, Argyll, Scotland.</p>
+  <div class="hero" aria-labelled-by="hero-data">
+    {% image "./source/machrihanish-boat.jpg",
+    "A shipwreck on Machrihanish Beach, Argyll, Scotland.", "hero", true %}
 
-<div class="rs-home-hero" aria-labelled-by="rs-hero-data">
-  {% image "./source/machrihanish-boat.jpg",
-    "A shipwreck on Machrihanish Beach, Argyll, Scotland.", "rs-home-hero", true %}
-  <div class="rs-hero-data-container">
-    <p id="rs-hero-data">A shipwreck on Machrihanish Beach, Argyll, Scotland.</p>
-  </div>
-  <button>
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="var(--color-secondary)" aria-hidden="true" focusable="false">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-    </svg>
-    <span class="vh">Show photo information</span></button>
-  <div class="rs-column">
-    <p>Rising Sky Limited is a web studio based in Scotland.</p>
+    <button>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="var(--color-secondary)" aria-hidden="true" focusable="false">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+      </svg>
+
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="var(--color-primary)">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+      </svg>
+
+      <span class="vh">Toggle photo information</span></button>
   </div>
 </div>
 
 <div class="rs-column">
+  <p class="rs-text-highlight-secondary rs-hero-statement">Hello. Rising Sky Limited is a web studio based in Scotland.</p>
   <p>We specialise in e&#8209;learning content, web applications and motion 
   graphic videos.</p>
 
