--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ eleventyNavigation:
   order: 1
 ---
 <div class="hero-container">
-  <p id="hero-data">A shipwreck on Machrihanish Beach, Argyll, Scotland.</p>
+  <p id="hero-data" aria-hidden="true">A shipwreck on Machrihanish Beach, Argyll, Scotland.</p>
   <div class="hero" aria-labelledby="hero-data">
     {% image "./source/machrihanish-boat.jpg",
     "A shipwreck on Machrihanish Beach, Argyll, Scotland.", "hero", true %}
@@ -26,6 +26,10 @@ eleventyNavigation:
 
 <div class="rs-column">
   <p class="rs-text-highlight-secondary rs-hero-statement">Hello. Rising Sky Limited is a web studio based in Scotland.</p>
+
+  <p>Get in touch</p>
+  <p>Email</p>
+  <p>Twitter</p>
 
   <p>We specialise in e&#8209;learning content, web applications and motion 
   graphic videos.</p>
