--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,15 @@ header > h1 {
   margin-bottom: var(--s1);
 }
 
+header > h1 > a > svg #rsSunshine {
+  transition: transform 0.3s;
+}
+
+header > h1:hover > a > svg #rsSunshine {
+  transform: translateX(-68px) translateY(-55px);
+  transition: transform 0.3s;
+}
+
 header > nav {
   flex-basis: 0;
   flex-grow: 999;
