--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,6 +60,17 @@
           <h1>
             <a href="{{ '/' | url }}">
               <svg  id="rs-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1212.1 344.92">
+                <defs>
+                  {# <radialGradient id="radial-gradient" cx="118.31" cy="102.98" fx="73.40752026564016" fy="68.21879870191607" r="115.41" gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#d55239"/>
+                    <stop offset="1" stop-color="#d55239"/>
+                  </radialGradient> #}
+
+                  <linearGradient id="linear-gradient" x1="118.31" y1="20.62" x2="118.31" y2="160.71" gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#d55239"/>
+                    <stop offset="1" stop-color="#d55239"/>
+                  </linearGradient>
+                </defs>
                 <g id="rsText" fill="var(--color-text)">
                   <path d="M612.83,228.61V137.88H612l-39.46,9.29v1.26c7.18,2.54,10.77,6.33,10.77,19.84v60.34c0,13.51-.64,20.68-9.29,20.68v1.27h48.11v-1.27C613.46,249.29,612.83,242.12,612.83,228.61Z"/>
                   <path d="M472.3,228.61V137.88h-.84L432,147.17v1.26c7.17,2.54,10.76,6.33,10.76,19.84v60.34c0,13.11-.62,20.23-8.55,20.64-14.53-.75-28.11-54.44-51.58-73.81V175c19.83-5.06,34-18.36,34-38.61C420.33,85,334,98.44,298.86,97v1.27c14.35,0,15.19,10.55,15.19,26.16v98.75c0,15.61-.84,26.16-15.19,26.16v1.27h62v-1.27c-14.35,0-15.62-10.55-15.62-26.16V177.34c8.24-.26,13.84-.42,17.51,9.07,25.75,59.72,29.54,65,46.85,65,18.69-.52,53.8-1.17,71.95-.84v-1.27C472.93,249.29,472.3,242.12,472.3,228.61ZM357.52,174H345.28v-66c0-5.06,3-7.59,8-7.59C393.21,93,396.56,176.77,357.52,174Z"/>
@@ -75,7 +86,7 @@
                 </g>
                 <circle id="rsSunshine" cx="123" cy="113" r="53" fill="#ffe000"/>
 
-                <path id="rsCloud" d="M81,66.36a29.08,29.08,0,0,0-18-6.24,29.59,29.59,0,0,0-29.42,29A44.17,44.17,0,0,0,43,174v.4h150.7v-.07a40.52,40.52,0,0,0,2.22-80.62c.09-1.26.13-2.55.13-3.83,0-32.22-26.88-58.33-60-58.33A60.14,60.14,0,0,0,81,66.36" fill="var(--color-primary)"/>
+                <path id="rsCloud" d="M81,66.36a29.08,29.08,0,0,0-18-6.24,29.59,29.59,0,0,0-29.42,29A44.17,44.17,0,0,0,43,174v.4h150.7v-.07a40.52,40.52,0,0,0,2.22-80.62c.09-1.26.13-2.55.13-3.83,0-32.22-26.88-58.33-60-58.33A60.14,60.14,0,0,0,81,66.36" fill="url(#linear-gradient)"/>
               </svg>
 
               <span class="vh">Rising Sky homepage</span>
