wave animation working

--- a/css/index.css
+++ b/css/index.css
@@ -1,388 +1,10 @@
 @charset "UTF-8";
 
-:root {
-  --measure: 65ch;
-
-  --font-family-display-heads: Ivy Presto, Georgia, Times, serif;
-  --font-family-display: Inter, -apple-system, system-ui, sans-serif;
-  --color-bg: #ffffff;
-  --color-bg-offset: #f7f7f9;
-  --color-text: #374160;
-  --color-text-offset: #677973;
-  --color-primary: #d55239;
-  --color-primary-offset: #e4ba7d;
-  --color-border: #f3e1c8;
-  --color-secondary: hsl(176, 43%, 34%);
-
-  --ratio: 1.5;
-  --s-5: clamp(0.33rem, 0.39rem + -0.29vw, 0.18rem);
-  --s-4: clamp(0.41rem, 0.47rem + -0.31vw, 0.25rem);
-  --s-3: clamp(0.51rem, 0.57rem + -0.31vw, 0.35rem);
-  --s-2: clamp(0.64rem, 0.69rem + -0.27vw, 0.5rem);
-  --s-1: clamp(0.8rem, 0.84rem + -0.18vw, 0.71rem);
-  --s0: clamp(1rem, 1rem + 0vw, 1rem);
-  --s1: clamp(1.25rem, 1.19rem + 0.32vw, 1.41rem);
-  --s2: clamp(1.56rem, 1.39rem + 0.85vw, 2rem);
-  --s3: clamp(1.95rem, 1.61rem + 1.7vw, 2.83rem);
-  --s4: clamp(2.44rem, 1.83rem + 3.04vw, 4rem);
-  --s5: clamp(3.05rem, 2.04rem + 5.07vw, 5.65rem);
-
-  --logo-max-width: 13rem;
-  --nav-max-inline-size: 62%;
-  --column-max-width: 50rem;
-
-  line-height: var(--ratio);
-  font-size: calc(0.333vw + 1em);
-}
-
-@font-face {
-  font-family: "Ivy Presto";
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(../fonts/IvyPrestoDisplayLight.woff2) format("woff2");
-}
-
-@font-face {
-  font-family: "Ivy Presto";
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(../fonts/IvyPrestoDisplaySemiBold.woff2) format("woff2");
-}
-
-/* inter-regular - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  src: local(""), url("../fonts/inter-v7-latin-500.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/inter-v7-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* inter-800 - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 800;
-  src: local(""), url("../fonts/inter-v7-latin-800.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/inter-v7-latin-800.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* Global stylesheet */
-* {
-  box-sizing: border-box;
-  font-family: var(--font-family-display);
-  max-inline-size: var(--measure);
-  outline-color: var(--color-primary);
-  word-break: break-word;
-}
-
-::selection {
-  background: var(--color-secondary);
-  color: white;
-}
-
-html,
-body,
-article,
-div,
-img,
-header,
-nav,
-main,
-footer {
-  max-inline-size: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-family-display-heads);
-  font-weight: 700;
-  text-rendering: optimizeLegibility;
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  color: var(--color-text);
-  background-color: var(--color-bg);
-  scrollbar-gutter: stable;
-}
-
-img {
-  width: 100%;
-  height: auto;
-}
-
-li {
-  line-height: 1.8;
-  /* padding-top: var(--s2); */
-  /* padding-bottom: var(--s2); */
-}
-
-/* Make sure the footer is at the bottom, even on short pages. */
-article {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100%;
-  min-height: 100%;
-}
-
-header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: top;
-  justify-content: space-between;
-}
-
-header > h1 {
-  flex-basis: var(--logo-max-width);
-  flex-grow: 1;
-  max-width: var(--logo-max-width);
-  padding-top: var(--s2);
-  margin-top: 0;
-  margin-bottom: var(--s1);
-}
-
-header > h1 > a > svg #rsSunshine {
-  transition: transform 0.4s;
-}
-
-header > h1:hover > a > svg #rsSunshine {
-  transform: translateX(-68px) translateY(-55px);
-  transition: transform 0.4s;
-}
-
-header > h1:hover > a > svg:hover stop:first-child {
-  stop-color: #ffe000;
-}
-
-header > h1:hover > a > svg:hover stop:last-child {
-  stop-color: #d55239;
-}
-
-header > h1:hover > a > svg stop {
-  -webkit-transition: 0.3s ease;
-  transition: 0.4s ease;
-}
-
-header > h1 > a > svg stop {
-  -webkit-transition: 0.3s ease;
-  transition: 0.4s ease;
-}
-
-header > nav {
-  flex-basis: 0;
-  flex-grow: 999;
-  min-inline-size: var(--nav-max-inline-size);
-}
-
-/* NAVIGATION */
-
-nav > ul {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: end;
-  gap: 0 clamp(1.09rem, 1rem + 0.47vw, 1.33rem);
-  list-style: none;
-  font-size: clamp(1rem, calc(1.5vw + 1em), 1.3rem);
-  padding: 0;
-  margin-top: 0;
-}
-
-nav > ul li {
-  margin-bottom: var(--s1);
-}
-
-nav > ul a {
-  text-decoration: none;
-  color: var(--color-text);
-  position: relative;
-  padding-bottom: var(--s-1);
-  --rs-duration: 0.2s;
-  --rs-distance: 8px;
-  --rs-easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-nav > ul a::before,
-nav > ul a::after {
-  content: "";
-  position: absolute;
-  bottom: 5px;
-  left: 0;
-  right: 0;
-  height: 5px;
-  background-color: var(--color-primary);
-}
-nav > ul a::before {
-  opacity: 0;
-  transform: translateY(calc(var(--rs-distance) * -1));
-  transition: transform 0s var(--rs-easeOutBack), opacity 0s;
-}
-nav > ul a::after {
-  opacity: 0;
-  transform: translateY(calc(var(--rs-distance) / 2));
-  transition: transform var(--rs-duration) var(--rs-easeOutBack),
-    opacity var(--rs-duration);
-}
-
-nav > ul li.nav-item-active a::before {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-nav > ul li:not(.nav-item-active) a:hover::before,
-nav > ul li:not(.nav-item-active) a:hover::after,
-nav > ul li:not(.nav-item-active) a:focus::before,
-nav > ul li:not(.nav-item-active) a:focus::after {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-nav > ul a:hover::before,
-nav > ul a:focus::before {
-  transition: transform var(--rs-duration) var(--rs-easeOutBack),
-    opacity var(--rs-duration);
-}
-
-nav > ul a:hover::after,
-nav > ul a:focus::after {
-  transition: transform 0s var(--rs-duration) var(--rs-easeOutBack),
-    opacity 0s var(--rs-duration);
-}
-
-/* NAVIGATION END */
-
-/* MAIN GLOBAL */
-
-main * + * {
-  margin-top: var(--s0);
-}
-
-/* SKIP LINK */
-
-.rs-skip-link {
-  display: block;
-  background-color: #eee;
-  border-bottom: 1px solid #ccc;
-  max-width: none;
-  padding: var(--s0) 0;
-  margin: 0;
-  text-align: center;
-  box-shadow: inset 0px -11px 8px -10px #ccc;
-  transition: margin-top 0.3s;
-}
-
-@media (prefers-reduced-motion) {
-  .rs-skip-link {
-    transition: none;
-  }
-}
-
-.rs-skip-link:not(:focus) {
-  margin-top: calc((var(--s0) * 3.8) * -1);
-}
-
-/* SKIP LINK END*/
-
-/* Home page CSS */
-
-.rs-home .hero-container {
-  position: relative;
-}
-
-.rs-home .hero-container #hero-data {
-  margin: 0 auto -1rem auto;
-  padding: 0 var(--s0) 0 var(--s0);
-  font-size: var(--s-1);
-  color: var(--color-text-offset);
-}
-
-.js .rs-home .hero-container #hero-data {
-  position: absolute;
-  top: 0;
-  z-index: 100;
-  padding: var(--s0);
-  width: calc(100% - 42px - var(--s0));
-  background-color: white;
-  transform: translateX(-100%);
-  transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
-}
-
-@media (prefers-reduced-motion) {
-  .js .rs-home .hero-container #hero-data {
-    transition: none;
-  }
-}
-
-.js .rs-home .hero-container.show #hero-data {
-  transform: translateX(0);
-}
-
-.rs-home .hero {
-  position: relative;
-  background-color: var(--color-primary);
-  height: 50vw;
-  max-height: 15rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  margin-top: 2rem;
-}
-
-.rs-home .hero > button,
-.rs-home .hero > button > svg {
-  border: 0;
-  padding: 0;
-  border-radius: 50%;
-}
-
-.rs-home .hero > button {
-  display: none;
-  position: absolute;
-  cursor: pointer;
-  top: var(--s-3);
-  right: var(--s-3);
-  margin-top: 0;
-  background-color: var(--color-secondary);
-}
-
-.rs-home .hero > button > svg {
-  width: 42px;
-  height: 42px;
-  margin-top: calc((42px - 42px) / 2);
-}
-
-.js .rs-home .hero > button {
-  display: block;
-  z-index: 200;
-  width: 42px;
-  height: 42px;
-}
-
-.rs-home .hero > button > svg:nth-child(2) {
-  display: none;
-  margin: 0;
-}
-
-.rs-home .hero-container.show .hero > button > svg:nth-child(2) {
-  display: inline-block;
-}
-
-.rs-home .hero-container.show .hero > button > svg:first-child {
-  display: none;
-}
-
-/* Home page CSS END*/
+@import "_variables.css";
+@import "_fonts.css";
+@import "_global.css";
+@import "_header.css";
+@import "_skip.css";
 
 /* UTILITIES */
 
