--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -118,6 +118,12 @@
 
           <div class="rs-waves-animation-popup">
 
+            <svg class="rs-waves-animation-ship-waves" viewBox="0 0 49.02 39.5">
+              <path d="M2 27.5h45c1.66 0 2.44 1.58 1.78 3.43l-2.13 6a4 4 0 0 1-3.42 2.61H5.79a4 4 0 0 1-3.43-2.61l-2.13-6C-.43 29.08.35 27.5 2 27.5Z" fill="#317c77"/>
+              <path fill="#317c77" d="M3.64 23.5h12c.47 0 .86-.57.86-1.26V4.85c0-.87-.72-1.3-1.14-.69L3.2 21.94c-.4.57-.12 1.56.44 1.56ZM42.41 23.5h-21a1.52 1.52 0 0 1-1.5-1.5V1.17a1.17 1.17 0 0 1 2-.83l21.28 21.29a1.1 1.1 0 0 1-.78 1.87Z"/>
+              <rect width="50" height="40" fill="#fff" style="opacity:0.005"/>
+            </svg>
+
             <svg class="rs-waves-animation-svg" width="200%" height="100%">
 
               <pattern id="pattern-wave" x="0" y="0" patternUnits="userSpaceOnUse" width="135" height="62.5">
